--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     },
     "require": {
-        "php": "^7.4 || ^8.0"
+        "php": "^7.4 || ^8.0",
+        "setasign/fpdf": "*"
     }
 }
